--- a/fft_proba.ipynb
+++ b/fft_proba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fft_b (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function fft_b(x)\n",
     "    N = length(x)\n",
@@ -27,13 +38,13 @@
     "    n = collect(0:(N_min-1))\n",
     "    M = exp.(-2π * im * n * n'/ N_min)\n",
     "    X = M * reshape(x, (:, N_min))'\n",
-    "    while size(X)[1] < N\n",
+    "    #while size(X)[1] > N\n",
+    "    for i in 1:2\n",
     "        X_even = X[:, 1:Int(size(X)[2] / 2)]\n",
     "        X_odd = X[:, (Int(size(X)[2] / 2)+1):end]\n",
     "        t = exp.(-1*im * π * collect(0:(size(X)[1]-1))/size(X)[1])\n",
-    "        terms = [t t]\n",
+    "        terms = hcat(map(x->t, 1:size(X_odd)[2])...)\n",
     "        X = vcat(X_even + terms .* X_odd, X_even - terms .* X_odd)\n",
-    "        println(X)\n",
     "    end\n",
     "    return X\n",
     "end\n",
@@ -44,11 +55,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8×1 Array{Complex{Float64},2}:\n",
+       "                36.0 + 0.0im\n",
+       "  -4.000000000000002 + 9.65685424949238im\n",
+       "                -4.0 + 4.0im\n",
+       "  -4.000000000000001 + 1.6568542494923788im\n",
+       "                -4.0 + 0.0im\n",
+       " -3.9999999999999996 - 1.6568542494923801im\n",
+       " -3.9999999999999996 - 4.0im\n",
+       " -3.9999999999999973 - 9.65685424949238im"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fft_b([1,2,3,4, 5, 6, 7, 8])"
+    "x = fft_b([1,2,3,4, 5, 6, 7, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Complex{Float64},1}:\n",
+       " 36.0 + 0.0im\n",
+       " -4.0 + 9.65685424949238im\n",
+       " -4.0 + 4.0im\n",
+       " -4.0 + 1.6568542494923806im\n",
+       " -4.0 + 0.0im\n",
+       " -4.0 - 1.6568542494923806im\n",
+       " -4.0 - 4.0im\n",
+       " -4.0 - 9.65685424949238im"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z =fft([1,2,3,4, 5, 6, 7, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isapprox(x, z)"
    ]
   },
   {
