--- a/fft_proba.ipynb
+++ b/fft_proba.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algorytm FFT"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +29,7 @@
        "fft_b (generic function with 1 method)"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,78 +60,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.055075 seconds (735 allocations: 40.484 KiB)\n"
+      "  0.044563 seconds (735 allocations: 40.484 KiB)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "8-element Array{Complex{Float64},1}:\n",
-       "                36.0 + 0.0im\n",
-       "                -4.0 + 9.65685424949238im\n",
-       "                -4.0 + 4.0im\n",
-       "                -4.0 + 1.6568542494923797im\n",
-       "                -4.0 + 0.0im\n",
-       " -3.9999999999999996 - 1.6568542494923797im\n",
-       " -3.9999999999999996 - 4.0im\n",
-       " -3.9999999999999987 - 9.65685424949238im"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time new = fft_b([1,2,3,4, 5, 6, 7, 8])"
+    "@time p1_n = fft_b([1,2,3,4, 5, 6, 7, 8]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000083 seconds (36 allocations: 2.984 KiB)\n"
+      "  0.000107 seconds (36 allocations: 2.984 KiB)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "8-element Array{Complex{Float64},1}:\n",
-       " 36.0 + 0.0im\n",
-       " -4.0 + 9.65685424949238im\n",
-       " -4.0 + 4.0im\n",
-       " -4.0 + 1.6568542494923806im\n",
-       " -4.0 + 0.0im\n",
-       " -4.0 - 1.6568542494923806im\n",
-       " -4.0 - 4.0im\n",
-       " -4.0 - 9.65685424949238im"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time old =fft([1,2,3,4, 5, 6, 7, 8])"
+    "@time p1_o =fft([1,2,3,4, 5, 6, 7, 8]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -133,113 +111,68 @@
        "true"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(new, old)"
+    "isapprox(p1_n, p1_o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = rand(16);"
+    "p2 = rand(1024);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000126 seconds (185 allocations: 14.281 KiB)\n"
+      "  0.183617 seconds (153.60 k allocations: 8.690 MiB)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "16-element Array{Complex{Float64},1}:\n",
-       "      5.67007062927372 + 0.0im\n",
-       "   -0.7613180247733727 - 1.9272603229745813im\n",
-       "    0.7225606777460523 + 0.1909678952047974im\n",
-       " 0.0064954194823636235 - 1.4228541890648465im\n",
-       "   -0.5086083857694561 - 0.04555230839112401im\n",
-       "   -0.4505390346312546 + 0.06572595212003618im\n",
-       "   0.21257882807633693 - 0.23939679469784292im\n",
-       "   -0.6778337618501359 + 0.7613226277852114im\n",
-       "   0.07131089398635293 + 0.0im\n",
-       "   -0.6778337618501357 - 0.7613226277852115im\n",
-       "   0.21257882807633693 + 0.23939679469784292im\n",
-       "  -0.45053903463125455 - 0.06572595212003607im\n",
-       "   -0.5086083857694561 + 0.04555230839112401im\n",
-       "  0.006495419482363152 + 1.422854189064847im\n",
-       "    0.7225606777460523 - 0.1909678952047974im\n",
-       "   -0.7613180247733732 + 1.927260322974581im"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time x = fft_b(w)"
+    "@time p2_n = fft_b(p2);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000089 seconds (35 allocations: 3.094 KiB)\n"
+      "  0.000207 seconds (35 allocations: 34.688 KiB)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "16-element Array{Complex{Float64},1}:\n",
-       "     5.67007062927372 + 0.0im\n",
-       "  -0.7613180247733731 - 1.9272603229745813im\n",
-       "   0.7225606777460524 + 0.1909678952047974im\n",
-       " 0.006495419482363346 - 1.422854189064847im\n",
-       "  -0.5086083857694561 - 0.04555230839112401im\n",
-       " -0.45053903463125455 + 0.06572595212003618im\n",
-       "   0.2125788280763369 - 0.23939679469784292im\n",
-       "  -0.6778337618501358 + 0.7613226277852116im\n",
-       "  0.07131089398635293 + 0.0im\n",
-       "  -0.6778337618501358 - 0.7613226277852116im\n",
-       "   0.2125788280763369 + 0.23939679469784292im\n",
-       " -0.45053903463125455 - 0.06572595212003618im\n",
-       "  -0.5086083857694561 + 0.04555230839112401im\n",
-       " 0.006495419482363346 + 1.422854189064847im\n",
-       "   0.7225606777460524 - 0.1909678952047974im\n",
-       "  -0.7613180247733731 + 1.9272603229745813im"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "@time y = fft(w)"
+    "@time p2_o = fft(p2);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -248,61 +181,68 @@
        "true"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(x, y)"
+    "isapprox(p2_n, p2_o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w2 = rand(1024^2);"
+    "p3 = rand(1024^2);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.328822 seconds (1.28 k allocations: 1.508 GiB, 21.26% gc time)\n"
+      "  1.673212 seconds (1.28 k allocations: 1.508 GiB, 31.86% gc time)\n"
      ]
     }
    ],
    "source": [
-    "@time x2 = fft_b(w2);"
+    "@time p3_n = fft_b(p3);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.095503 seconds (37 allocations: 32.003 MiB, 9.26% gc time)\n"
+      "  0.121848 seconds (37 allocations: 32.003 MiB, 16.15% gc time)\n"
      ]
     }
    ],
    "source": [
-    "@time y2 = fft(w2);"
+    "@time p3_o = fft(p3);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -311,13 +251,154 @@
        "true"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(x2, y2)"
+    "isapprox(p3_n, p3_o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.0 0.0; 0.0 0.0; … ; 0.0 0.0; 0.0 0.0], 48000.0f0, 0x0010, WAVChunk[WAVChunk(Symbol(\"fmt \"), UInt8[0x10, 0x00, 0x00, 0x00, 0x01, 0x00, 0x02, 0x00, 0x80, 0xbb, 0x00, 0x00, 0x00, 0xee, 0x02, 0x00, 0x04, 0x00, 0x10, 0x00]), WAVChunk(:LIST, UInt8[0x49, 0x4e, 0x46, 0x4f, 0x49, 0x41, 0x52, 0x54, 0x0f, 0x00  …  0x35, 0x38, 0x2e, 0x34, 0x35, 0x2e, 0x31, 0x30, 0x30, 0x00])])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bird = wavread(\"bird.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wavplay(\"bird.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sound = bird[1][:,1]\n",
+    "wind = 1024\n",
+    "len = length(sound)\n",
+    "st = 300\n",
+    "ile_sampli  = (len-wind) ÷ st\n",
+    "slices = Array{Any}(undef,ile_sampli,wind)\n",
+    "for i in 1:ile_sampli\n",
+    "    slices[i, 1:wind] = sound[1+(i-1)*st : wind + (i-1)*st]\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "\u001b[91mMethodError: no method matching plan_fft(::Array{Any,2}, ::UnitRange{Int64})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  plan_fft(\u001b[91m::StridedArray{T, N}\u001b[39m, ::Any; flags, timelimit) where {T<:Union{Complex{Float32}, Complex{Float64}}, N} at C:\\Users\\THINK\\.julia\\packages\\FFTW\\G3lSO\\src\\fft.jl:681\u001b[39m\n\u001b[91m\u001b[0m  plan_fft(\u001b[91m::AbstractArray{var\"#s17\",N} where N where var\"#s17\"<:Real\u001b[39m, ::Any; kws...) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:199\u001b[39m\n\u001b[91m\u001b[0m  plan_fft(\u001b[91m::AbstractArray{var\"#s26\",N} where N where var\"#s26\"<:(Complex{var\"#s27\"} where var\"#s27\"<:Union{Integer, Rational})\u001b[39m, ::Any; kws...) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:201\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[91mMethodError: no method matching plan_fft(::Array{Any,2}, ::UnitRange{Int64})\u001b[39m\n\u001b[91m\u001b[0mClosest candidates are:\u001b[39m\n\u001b[91m\u001b[0m  plan_fft(\u001b[91m::StridedArray{T, N}\u001b[39m, ::Any; flags, timelimit) where {T<:Union{Complex{Float32}, Complex{Float64}}, N} at C:\\Users\\THINK\\.julia\\packages\\FFTW\\G3lSO\\src\\fft.jl:681\u001b[39m\n\u001b[91m\u001b[0m  plan_fft(\u001b[91m::AbstractArray{var\"#s17\",N} where N where var\"#s17\"<:Real\u001b[39m, ::Any; kws...) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:199\u001b[39m\n\u001b[91m\u001b[0m  plan_fft(\u001b[91m::AbstractArray{var\"#s26\",N} where N where var\"#s26\"<:(Complex{var\"#s27\"} where var\"#s27\"<:Union{Integer, Rational})\u001b[39m, ::Any; kws...) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:201\u001b[39m\n\u001b[91m\u001b[0m  ...\u001b[39m",
+      "",
+      "Stacktrace:",
+      " [1] plan_fft(::Array{Any,2}; kws::Base.Iterators.Pairs{Union{},Union{},Tuple{},NamedTuple{(),Tuple{}}}) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:52",
+      " [2] plan_fft(::Array{Any,2}) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:52",
+      " [3] fft(::Array{Any,2}) at C:\\Users\\THINK\\.julia\\packages\\AbstractFFTs\\JebmH\\src\\definitions.jl:50",
+      " [4] top-level scope at In[57]:1",
+      " [5] include_string(::Function, ::Module, ::String, ::String) at .\\loading.jl:1091"
+     ]
+    }
+   ],
+   "source": [
+    "fft(slices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Próba IFFT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ifft_b (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function ifft_b(x)\n",
+    "    N = length(x)\n",
+    "    if log2(N) % 1 > 0\n",
+    "        throw(ArgumentError(\"must be a power of 2\"))\n",
+    "    end\n",
+    "    N_min = min(N, 1)\n",
+    "    \n",
+    "    n = collect(0:(N_min-1))\n",
+    "    M = exp.(2π * im * n * n'/ N_min)\n",
+    "    X = (1/N) * M * reshape(x, (:, N_min))'\n",
+    "    while size(X)[1] < N\n",
+    "        X_even = X[:, 1:Int(size(X)[2] / 2)]\n",
+    "        X_odd = X[:, (Int(size(X)[2] / 2)+1):end]\n",
+    "        t = exp.(2*im * π * collect(0:(size(X)[1]-1))/size(X)[1])\n",
+    "        terms = hcat(map(x->t, 1:size(X_odd)[2])...)\n",
+    "        X = vcat(X_even + terms .* X_odd, X_even - terms .* X_odd)\n",
+    "    end\n",
+    "    return vec(X)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = fft(rand(8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = ifft(a)"
    ]
   },
   {
