--- a/fft_proba.ipynb
+++ b/fft_proba.ipynb
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "ifft_b (generic function with 1 method)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,34 +371,120 @@
     "    \n",
     "    n = collect(0:(N_min-1))\n",
     "    M = exp.(2π * im * n * n'/ N_min)\n",
-    "    X = (1/N) * M * reshape(x, (:, N_min))'\n",
+    "    X = M * reshape(x, (:, N_min))'\n",
     "    while size(X)[1] < N\n",
     "        X_even = X[:, 1:Int(size(X)[2] / 2)]\n",
     "        X_odd = X[:, (Int(size(X)[2] / 2)+1):end]\n",
-    "        t = exp.(2*im * π * collect(0:(size(X)[1]-1))/size(X)[1])\n",
+    "        t = exp.(im * π * collect(0:(size(X)[1]-1))/size(X)[1])\n",
     "        terms = hcat(map(x->t, 1:size(X_odd)[2])...)\n",
     "        X = vcat(X_even + terms .* X_odd, X_even - terms .* X_odd)\n",
     "    end\n",
-    "    return vec(X)\n",
+    "    return (1/N).*vec(X)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Complex{Float64},1}:\n",
+       "   3.9071740372336317 + 0.0im\n",
+       " 0.009953478046282316 + 0.5686658390529176im\n",
+       " -0.34031276956722145 - 0.5387491153285573im\n",
+       "   0.1962889379938938 + 0.15812965833113465im\n",
+       "   1.6332236655475711 + 0.0im\n",
+       "   0.1962889379938938 - 0.15812965833113465im\n",
+       " -0.34031276956722145 + 0.5387491153285573im\n",
+       " 0.009953478046282316 - 0.5686658390529176im"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = fft(rand(8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Complex{Float64},1}:\n",
+       "   0.659032124465889 + 0.0im\n",
+       " 0.25751080228275103 + 0.0im\n",
+       "    0.67499386005901 + 0.0im\n",
+       " 0.05401577827070758 + 0.0im\n",
+       "  0.5559109164458009 + 0.0im\n",
+       "  0.5803513483030428 + 0.0im\n",
+       "  0.8802619504199014 + 0.0im\n",
+       " 0.24509725698652893 + 0.0im"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = ifft(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8-element Array{Complex{Float64},1}:\n",
+       "   0.659032124465889 + 0.0im\n",
+       " 0.24509725698652893 + 1.3083233414750957e-18im\n",
+       "  0.8802619504199014 - 6.2845227456888844e-18im\n",
+       "  0.5803513483030427 - 2.212500505319678e-17im\n",
+       "  0.5559109164458009 + 0.0im\n",
+       " 0.05401577827070761 + 1.5186111149289552e-17im\n",
+       "    0.67499386005901 + 6.2845227456888844e-18im\n",
+       "  0.2575108022827511 + 5.630570562432133e-18im"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = ifft_b(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isapprox(b, c)"
    ]
   },
   {
