OStateczna wersja fft i ifft na ten tydzień

--- a/fft_proba.ipynb
+++ b/fft_proba.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Main.NaszModul"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include(\"naszmodul.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +49,7 @@
        "fft_b (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.044563 seconds (735 allocations: 40.484 KiB)\n"
+      "  0.000151 seconds (145 allocations: 9.078 KiB)\n"
      ]
     }
    ],
@@ -85,14 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000107 seconds (36 allocations: 2.984 KiB)\n"
+      "  0.000095 seconds (36 allocations: 2.984 KiB)\n"
      ]
     }
    ],
@@ -102,7 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000007 seconds (3 allocations: 560 bytes)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p1_d = NaszModul.dft([1,2,3,4, 5, 6, 7, 8]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +148,7 @@
        "true"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,12 +161,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <span style='color:red'> Klasyczne dft będzie działać zdecydowanie dla długości do 32  </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Przykład 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.183617 seconds (153.60 k allocations: 8.690 MiB)\n"
+      "  0.000595 seconds (482 allocations: 842.078 KiB)\n"
      ]
     }
    ],
@@ -155,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000207 seconds (35 allocations: 34.688 KiB)\n"
+      "  0.000111 seconds (35 allocations: 34.688 KiB)\n"
      ]
     }
    ],
@@ -172,7 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.007876 seconds (2 allocations: 32.250 KiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p2_d = NaszModul.dft(p2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +242,7 @@
        "true"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.673212 seconds (1.28 k allocations: 1.508 GiB, 31.86% gc time)\n"
+      "  3.048656 seconds (3.98 M allocations: 1.611 GiB, 19.11% gc time)\n"
      ]
     }
    ],
@@ -225,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.121848 seconds (37 allocations: 32.003 MiB, 16.15% gc time)\n"
+      "  0.099475 seconds (37 allocations: 32.003 MiB, 6.83% gc time)\n"
      ]
     }
    ],
@@ -241,8 +302,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dla naszego klasycznego dft końca możemy się nawet nie doczekać"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@time p3_d = NaszModul.dft(p3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +328,7 @@
        "true"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,6 +342,99 @@
    "metadata": {},
    "source": [
     "## Przykład 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p4 = rand(2^18); #262144"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.312453 seconds (1.13 k allocations: 350.033 MiB, 21.57% gc time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p4_n = fft_b(p4);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.023736 seconds (37 allocations: 8.003 MiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p4_o = fft(p4);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@time p4_d = NaszModul.dft(p4);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W tym wypadku również klasyczna wersja nie wyrabia za dobrze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isapprox(p4_n, p4_o)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład kolejny (Na razie niewypał)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style='color:green'>Koncepcja dla długości nie będących potęgami liczby 2 - samplowanie lub dopełnianie zerami</span>"
    ]
   },
   {
@@ -342,12 +512,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Próba IFFT"
+    "## Algorytm IFFT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +526,7 @@
        "ifft_b (generic function with 1 method)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,115 +546,162 @@
     "        X_even = X[:, 1:Int(size(X)[2] / 2)]\n",
     "        X_odd = X[:, (Int(size(X)[2] / 2)+1):end]\n",
     "        t = exp.(im * π * collect(0:(size(X)[1]-1))/size(X)[1])\n",
-    "        terms = hcat(map(x->t, 1:size(X_odd)[2])...)\n",
-    "        X = vcat(X_even + terms .* X_odd, X_even - terms .* X_odd)\n",
+    "        terms = hcat(map(x->t, 1:size(X_odd)[2])...) #tu chyba coś się pusje\n",
+    "        X = vcat(X_even + terms .* X_odd, X_even - terms .* X_odd)#albo tu\n",
     "    end\n",
-    "    return (1/N).*vec(X)\n",
+    "    return (1/N).*[X[1]; reverse(X[2:end])]\n",
     "end"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 114,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8-element Array{Complex{Float64},1}:\n",
-       "   3.9071740372336317 + 0.0im\n",
-       " 0.009953478046282316 + 0.5686658390529176im\n",
-       " -0.34031276956722145 - 0.5387491153285573im\n",
-       "   0.1962889379938938 + 0.15812965833113465im\n",
-       "   1.6332236655475711 + 0.0im\n",
-       "   0.1962889379938938 - 0.15812965833113465im\n",
-       " -0.34031276956722145 + 0.5387491153285573im\n",
-       " 0.009953478046282316 - 0.5686658390529176im"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "a = fft(rand(8))"
+    "## Przykład 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8-element Array{Complex{Float64},1}:\n",
-       "   0.659032124465889 + 0.0im\n",
-       " 0.25751080228275103 + 0.0im\n",
-       "    0.67499386005901 + 0.0im\n",
-       " 0.05401577827070758 + 0.0im\n",
-       "  0.5559109164458009 + 0.0im\n",
-       "  0.5803513483030428 + 0.0im\n",
-       "  0.8802619504199014 + 0.0im\n",
-       " 0.24509725698652893 + 0.0im"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b = ifft(a)"
+    "p5 = fft(rand(16));"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8-element Array{Complex{Float64},1}:\n",
-       "   0.659032124465889 + 0.0im\n",
-       " 0.24509725698652893 + 1.3083233414750957e-18im\n",
-       "  0.8802619504199014 - 6.2845227456888844e-18im\n",
-       "  0.5803513483030427 - 2.212500505319678e-17im\n",
-       "  0.5559109164458009 + 0.0im\n",
-       " 0.05401577827070761 + 1.5186111149289552e-17im\n",
-       "    0.67499386005901 + 6.2845227456888844e-18im\n",
-       "  0.2575108022827511 + 5.630570562432133e-18im"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000063 seconds (40 allocations: 3.141 KiB)\n"
+     ]
     }
    ],
    "source": [
-    "c = ifft_b(a)"
+    "@time p5_o = ifft(p5);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000132 seconds (208 allocations: 16.297 KiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p5_n = ifft_b(p5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000026 seconds (2 allocations: 672 bytes)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p5_d = NaszModul.idft(p5);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "false"
+       "true"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(b, c)"
+    "isapprox(p5_o, p5_n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <span style='color:red'> Tak jak w przypadku fft, dla małych długości klasyczna wersja idft będzie szybsza.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p6 = fft(rand(1024^2));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.094419 seconds (41 allocations: 16.003 MiB, 21.31% gc time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p5_o = ifft(p6);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.480566 seconds (1.31 k allocations: 1.570 GiB, 15.73% gc time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p5_n = ifft_b(p6);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Również nasz idft będzie miało duży problem"
    ]
   },
   {
@@ -492,7 +709,104 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#@time p5_d = NaszModul.idft(p6);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isapprox(p5_o, p5_n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Przykład 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p7 = fft(rand(2^18)); #ta sama liczba co w przykładzie 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.009599 seconds (41 allocations: 4.003 MiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p7_o = ifft(p7);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.533640 seconds (1.16 k allocations: 366.034 MiB, 39.69% gc time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p7_n = ifft_b(p7);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tak samo jak wcześniej - idft nie będzie wyrabiał dla tak dużej liczby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@time p7_d = NaszModul.idft(p7);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "isapprox(p7_o, p7_n)"
+   ]
   }
  ],
  "metadata": {
