Poprawienie fft na bardziej juliowy

--- a/fft_proba.ipynb
+++ b/fft_proba.ipynb
@@ -80,6 +80,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fft_b2 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function fft_b2(x)\n",
+    "    N = length(x)\n",
+    "    if log2(N) % 1 > 0\n",
+    "        throw(ArgumentError(\"must be a power of 2\"))\n",
+    "    end\n",
+    "    N_min = min(N, 1)\n",
+    "    \n",
+    "    n = collect(0:(N_min-1))\n",
+    "    M = cis.(-2π * n * n'/ N_min)\n",
+    "    X = M * reshape(x, (:, N_min))'\n",
+    "    while size(X)[1] < N\n",
+    "        X_even = X[:, 1:Int(size(X)[2] / 2)]\n",
+    "        X_odd = X[:, (Int(size(X)[2] / 2)+1):end]\n",
+    "        terms = cis.(-1 * π * collect(0:(size(X)[1]-1))/size(X)[1])\n",
+    "        X = [X_even .+ terms .* X_odd; X_even .- terms .* X_odd]\n",
+    "    end\n",
+    "    return vec(X)\n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,14 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000151 seconds (145 allocations: 9.078 KiB)\n"
+      "  0.000115 seconds (145 allocations: 9.078 KiB)\n"
      ]
     }
    ],
@@ -105,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000095 seconds (36 allocations: 2.984 KiB)\n"
+      "  0.000081 seconds (36 allocations: 2.984 KiB)\n"
      ]
     }
    ],
@@ -122,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000007 seconds (3 allocations: 560 bytes)\n"
+      "  0.000006 seconds (3 allocations: 560 bytes)\n"
      ]
     }
    ],
@@ -139,7 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000027 seconds (42 allocations: 4.734 KiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p1_ne = fft_b2([1,2,3,4, 5, 6, 7, 8]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -148,13 +202,13 @@
        "true"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(p1_n, p1_o)"
+    "isapprox(p1_ne, p1_o)"
    ]
   },
   {
@@ -173,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,14 +236,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000595 seconds (482 allocations: 842.078 KiB)\n"
+      "  0.001139 seconds (482 allocations: 842.078 KiB)\n"
      ]
     }
    ],
@@ -199,14 +253,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000111 seconds (35 allocations: 34.688 KiB)\n"
+      "  0.000470 seconds (100 allocations: 546.922 KiB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p2_ne = fft_b2(p2);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.000136 seconds (35 allocations: 34.688 KiB)\n"
      ]
     }
    ],
@@ -216,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.007876 seconds (2 allocations: 32.250 KiB)\n"
+      "  0.006530 seconds (2 allocations: 32.250 KiB)\n"
      ]
     }
    ],
@@ -233,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -242,13 +313,13 @@
        "true"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(p2_n, p2_o)"
+    "isapprox(p2_n, p2_ne)"
    ]
   },
   {
@@ -260,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,14 +340,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  3.048656 seconds (3.98 M allocations: 1.611 GiB, 19.11% gc time)\n"
+      "  1.287454 seconds (1.28 k allocations: 1.508 GiB, 29.17% gc time)\n"
      ]
     }
    ],
@@ -286,14 +357,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.099475 seconds (37 allocations: 32.003 MiB, 6.83% gc time)\n"
+      "  0.746053 seconds (324 allocations: 1016.016 MiB, 19.80% gc time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p3_ne = fft_b2(p3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.101338 seconds (37 allocations: 32.003 MiB, 19.24% gc time)\n"
      ]
     }
    ],
@@ -319,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -328,13 +416,13 @@
        "true"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "isapprox(p3_n, p3_o)"
+    "isapprox(p3_n, p3_ne)"
    ]
   },
   {
@@ -346,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.312453 seconds (1.13 k allocations: 350.033 MiB, 21.57% gc time)\n"
+      "  0.261783 seconds (1.13 k allocations: 350.033 MiB, 20.20% gc time)\n"
      ]
     }
    ],
@@ -372,14 +460,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.023736 seconds (37 allocations: 8.003 MiB)\n"
+      "  0.246188 seconds (1.13 k allocations: 350.033 MiB, 16.97% gc time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@time p4_ne = fft_b(p4);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.020050 seconds (37 allocations: 8.003 MiB)\n"
      ]
     }
    ],
@@ -405,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +519,7 @@
        "true"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
